test/scc/decl/semantic-errors/074.a
074.t:1:15: error: 'register' specifier allowed on variable declarations only